# code-learning-path

./: .editorconfig  .gitignore  AGENT.md  LICENSE  README.md  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  requirements.txt  ui_only_pyside6.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
code-log-tracker/: .env  SECURITY_UPDATE.md  clean_learning_tracker.db  learning_tracker.db  learning_tracker_backup.db  main.py  quick_setup.py  readme.md  requirements.txt  setup_credentials.py  streamlit_app.py  streamlit_auth.py  streamlit_secrets.toml  streamlit_secrets_secure.toml  supabase_setup.sql  test_connection.py
code-log-tracker/app/: dashboard_window.py  db.py  main_window.py  migrate_db.py  (+3 more)
html-css-trajectory/: COURSES.md
javascript-trajectory/: PROJECTS.md
python-trajectory/: COURSES.md  PROJECTS.md
python-trajectory/projects/personal/capstones/cap_01_<title>/: README.md  notes.md  pyproject.toml
python-trajectory/projects/personal/mini-projects/tbdofficial/Practice test /pratice/: setup.cfg
python-trajectory/projects/personal/mini-projects/tbdofficial/Practice test /pratice/docs/: conf.py  reference.rst
python-trajectory/projects/personal/qt-multiagent-chat/: AGENT.md  config.py  pyproject.toml  requirements.txt
python-trajectory/projects/personal/qt-multiagent-chat/agents/: base_agent.py
python-trajectory/projects/personal/qt-multiagent-chat/data/history/: conv1.json  default.json
python-trajectory/projects/personal/qt-multiagent-chat/data/knowledge/global/: readme.txt
python-trajectory/projects/personal/qt-multiagent-chat/domain/: store.py
python-trajectory/projects/personal/qt-multiagent-chat/services/: llm_qwen.py
python-trajectory/projects/personal/qt-multiagent-chat/ui/: message_model.py  styles.qss
python-trajectory/projects/personal/qt-multiagent-chat/utils/: logging.py
ui code tracker /: ui_only_pyside6 copy 2.py
(+416 files in other folders)
