[project]
name = "cap_01_<title>"
version = "0.1.0"
description = "Starter template project."
authors = [{ name = "Miguel A. Gonzalez", email = "mg.systems.dev@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["black>=24.0.0", "ruff>=0.4.0", "pytest>=7.0.0"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
