[metadata]
name = pratice
version = 1.0
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = 
author = 
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = pratice
setup_requires =
    wheel
[options.entry_points]
console_scripts =
    pratice=pratice:main
[build_ext]
inplace = 1
